vnfm-core: Fix port with external network.